The blob was takin' over the scrollbar! Should be fixed.. now?

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -342,7 +342,7 @@ nav a span {
   .blob {
     width: 15rem;
     height: 15rem;
-    max-width: 90%;
+    max-width: 70%;
   }
 }
 
